--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         environment:
             - POSTGRES_DB=web
             - POSTGRES_USER=admin
-            - POSTGRES_PASSWORD=admin
+            - POSTGRES_PASSWORD=1234qwer
         ports:
             - 5432:5432
         volumes:
