--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,14 @@ click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.1.6
-Django==3.2.2
+Django==3.2.3
+gevent==21.1.2
+greenlet==1.1.0
+gunicorn==20.1.0
 idna==2.10
 kombu==5.0.2
 prompt-toolkit==3.0.18
+psycopg2-binary==2.8.6
 pytz==2021.1
 requests==2.25.1
 six==1.16.0
@@ -22,3 +26,5 @@ sqlparse==0.4.1
 urllib3==1.26.4
 vine==5.0.0
 wcwidth==0.2.5
+zope.event==4.5.0
+zope.interface==5.4.0
